// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DialogTitle ACT theme matches the snapshot 1`] = `
<div>
  <h2
    class="MuiTypography-root MuiTypography-h6 MuiDialogTitle-root css-o52oqi-MuiTypography-root-MuiDialogTitle-root"
  >
    Hey
  </h2>
</div>
`;

exports[`DialogTitle ACT_ET theme matches the snapshot 1`] = `
<div>
  <h2
    class="MuiTypography-root MuiTypography-h6 MuiDialogTitle-root css-1mu4i29-MuiTypography-root-MuiDialogTitle-root"
  >
    Hey
  </h2>
</div>
`;

exports[`DialogTitle ENCOURA theme matches the snapshot 1`] = `
<div>
  <h2
    class="MuiTypography-root MuiTypography-h6 MuiDialogTitle-root css-1u00vej-MuiTypography-root-MuiDialogTitle-root"
  >
    Hey
  </h2>
</div>
`;

exports[`DialogTitle ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <h2
    class="MuiTypography-root MuiTypography-h6 MuiDialogTitle-root css-1u00vej-MuiTypography-root-MuiDialogTitle-root"
  >
    Hey
  </h2>
</div>
`;

exports[`DialogTitle ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <h2
    class="MuiTypography-root MuiTypography-h6 MuiDialogTitle-root css-17g4d5b-MuiTypography-root-MuiDialogTitle-root"
  >
    Hey
  </h2>
</div>
`;
